...
                                    <constraint firstAttribute="width" constant="60" id="yEx-C7-lem"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mxf-HX-nSv">
                                <rect key="frame" x="179" y="793" width="73" height="35"/>
                                <color key="backgroundColor" name="YP White (iOS)"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="sie-j1-o3N"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
...
                                <connections>
                                    <outlet property="delegate" destination="DQM-lU-jv5" id="u2b-Sh-CuV"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8A7-KV-we0">
                                <rect key="frame" x="0.0" y="48" width="130" height="42"/>
                                <accessibility key="accessibilityConfiguration" identifier="back button from single image view"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="42" id="1yr-px-q0J" userLabel="height = 44"/>
                                    <constraint firstAttribute="width" constant="130" id="iVq-kB-SEf"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" image="backward_button"/>
...
